# BYOL_Representations_for_Holographic_Pollen

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
byol_poleno/model/: __init__.py  backbones.py  custom_byol.py  lightning.py  objectives.py  ssl_model.py  vicreg.py
byol_poleno/utils/: config.py  notebook_utils.py  pipeline.py
config/: base_config.yaml  base_distributed_config.yaml  slurm_byol_dual_config_L.yaml  slurm_config.yaml  slurm_distributed_config.yaml  slurm_simsiam_dual_config_L.yaml  slurm_vicreg_dual_config_L.yaml
dockerfile/: byol_setup.def  dockerfile.slurm
model/: backbones.py
slurm/: README.md
slurm/byol/: setup_byol_dual_L.sh
slurm/simsiam/: setup_simsiam_dual_L.sh
slurm/vicreg/: setup_vicreg_dual_L.sh
ssl_poleno/evaluation/: knn.py  mrr.py  report.py  utils.py
ssl_poleno/model/: custom_byol.py  encoders.py  lightning.py  losses.py  objectives.py  ssl_model.py
ssl_poleno/utils/: config.py  notebook_utils.py  pipeline.py  wandb_utils.py
tools/: eval_report.py  eval_report_label_size.py  eval_report_subsets.py  eval_report_trainsize.py  inference.py  postprocessing.py  preprocessing.py  test.py  train.py  train_lightning.py
tools/baselines/: clip_vision_encoding.py  dinov2_encoding.py  dinov3_encoding.py
utils/: config.py  custom_byol.py  model_setup.py  notebook_utils.py
